[project]
name = "cnm-scrypt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "python-calamine>=0.6.2",
    "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
